# cerise

./: .gitignore  Cargo.toml  LICENSE  index.html
.github/workflows/: gh_pages_deployment.yml
src/: main.rs  synth.rs  ui.rs  util.rs
src/synth/: oscillator.rs  rack.rs
src/ui/: frame.rs
