[package]
name = "cerise"
version = "0.1.0"
authors = ["kokone <kokone@kupo.pw>"]
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
hecs = "0.10.3"
pixels = "0.13.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["GpuTextureFormat", "Window"] }
winit = "0.28.6"

